# pixsee

./: .gitignore  README.md  build.gradle  dependencies.gradle  gradle.properties  local.properties  settings.gradle
pixseecamera/src/main/jni/: CMakeLists.txt  DetectionBasedTracker_jni.cpp
pixseecamera/src/main/jni/include/dlib/: add_python_module  binary_search_tree.h  bit_stream.h  cmd_line_parser.h  compress_stream.h  config.h  config_reader.h  cpp_pretty_printer.h  cpp_tokenizer.h  dir_nav.h  directed_graph.h  entropy_decoder.h  entropy_decoder_model.h  entropy_encoder.h  entropy_encoder_model.h  float_details.h  graph.h  graph_utils_threaded.h  hash_set.h  image_io.h  is_kind.h  lz77_buffer.h  memory_manager.h  memory_manager_global.h  mlp.h  numeric_constants.h  platform.h  quantum_computing.h  queue.h  reference_counter.h  sequence.h  set.h  smart_pointers.h  smart_pointers_thread_safe.h  sort.h  stack_trace.h  static_set.h  statistics.h  std_allocator.h  sync_extension.h  (+3 more)
pixseecamera/src/main/jni/include/dlib/all/: source.cpp
pixseecamera/src/main/jni/include/dlib/any/: any.h  any_decision_function.h
pixseecamera/src/main/jni/include/dlib/array/: array_kernel.h
pixseecamera/src/main/jni/include/dlib/array2d/: array2d_generic_image.h
pixseecamera/src/main/jni/include/dlib/base64/: base64_kernel_1.h
pixseecamera/src/main/jni/include/dlib/bigint/: bigint_kernel_1.cpp  bigint_kernel_2.cpp  bigint_kernel_c.h
pixseecamera/src/main/jni/include/opencv2/: calib3d.hpp  core.hpp  features2d.hpp  highgui.hpp  imgcodecs.hpp  ml.hpp  objdetect.hpp  videoio.hpp
(+2110 files in other folders)
